--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     --fuenteParrafo: 'PT Sans', sans-serif;
 
     --primario: #784d3c;
+    --claro: #e1e1e1;
     --blanco: #fff;
     --negro: #000;
 }
@@ -120,6 +121,13 @@ img {
     font-weight: 700;
 }
 
+@media (min-width: 768px) {
+    .navegacion {
+        display: flex;
+        gap: 2rem;
+    }
+}
+
 .navegacion__enlace {
     display: block;
     text-align: center;
@@ -127,9 +135,44 @@ img {
     color: var(--blanco);
 }
 
+/* Contenido principal */
+
 @media (min-width: 768px) {
-    .navegacion {
-        display: flex;
-        gap: 2rem;
+    .contenido-principal {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 4rem;
     }
+}
+
+.entrada {
+    border-bottom: 1px solid var(--claro);
+    margin-bottom: 2rem;
+}
+
+.entrada:last-of-type {
+    border: none;
+    margin-bottom: 0;
+}
+
+.boton {
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+    }
+}
+
+.boton--primario {
+    background-color: var(--negro);
 }
