--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h2,
 h3,
 h4 {
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 
 h1 {
@@ -175,4 +176,52 @@ img {
 
 .boton--primario {
     background-color: var(--negro);
+}
+
+.boton--secundario {
+    background-color: var(--primario);
+}
+
+.cursos {
+    list-style: none;
+}
+
+.widget-curso {
+    border-bottom: 1px solid --claro;
+    margin-bottom: 2rem;
+}
+
+.widget-curso:last-of-type {
+    border: none;
+    margin-bottom: 0;
+}
+
+.widget-curso__info {
+    font-weight: normal;
+}
+
+.widget-curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: bold;
+}
+
+.widget-curso__info,
+.widget-curso__label {
+    font-size: 2rem;
+}
+
+/* footer */
+
+.footer {
+    background-color: var(--negro);
+}
+
+@media (min-width: 768px) {
+    .footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 20rem;
+        padding: 0 2rem;
+    }
 }
