--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ html {
 /** Globals **/
 
 .contenedor {
-    max-width: 120rem;
-    width: 90%;
+    width: min(90%, 120rem);
     margin: 0 auto;
 }
 
@@ -61,6 +60,7 @@ h4 {
 
 img {
     max-width: 100%;
+    border-radius: .8rem;
 }
 
 /* Utilidades */
@@ -81,7 +81,7 @@ img {
 
 .header {
     background-image: url(./assets/banner.webp);
-    height: 60rem;
+    height: 50rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -200,7 +200,8 @@ img {
     font-weight: normal;
 }
 
-.widget-curso__label {
+.widget-curso__label,
+.curso__label {
     font-family: var(--fuenteHeading);
     font-weight: bold;
 }
@@ -214,6 +215,8 @@ img {
 
 .footer {
     background-color: var(--negro);
+    padding: 2rem 0;
+    margin-top: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -221,7 +224,36 @@ img {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 20rem;
+        height: 10rem;
         padding: 0 2rem;
     }
+}
+
+/* sobre nosotros */
+
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
+
+/* curso */
+
+.curso {
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--claro);
+}
+
+@media (min-width: 768px) {
+    .curso {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 2rem;
+    }
+}
+
+.curso:last-of-type {
+    border: none;
 }
