--- a/style.css
+++ b/style.css
@@ -166,12 +166,18 @@ img {
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
 }
 
 @media (min-width: 768px) {
     .boton {
         display: inline-block;
     }
+}
+
+.boton:hover {
+    cursor: pointer;
+
 }
 
 .boton--primario {
@@ -283,4 +289,31 @@ img {
     height: 30rem;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.formulario {
+    background-color: var(--blanco);
+    margin: -6rem auto 0 auto;
+    width: 90%;
+    padding: 4rem;
+}
+
+.campo {
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.campo__label {
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.campo__field {
+    flex: 1;
+    border: 1px solid var(--claro);
+}
+
+.campo__field--textarea {
+    height: 20rem;
 }
